<resources>
    <string name="app_name">Prac5</string>
    <string name="bananas_text">Бананы - это замечательные тропические фрукты, которые обладают сладким вкусом и приятным ароматом. Их сочная мякоть насыщена питательными веществами, такими как калий, витамин C и витамин B6. Бананы идеально подходят для утреннего завтрака, замечательно дополняют фруктовые салаты и используются в выпечке. К тому же, они являются отличным источником энергии и придают бодрость на целый день.</string>
    <string name="apples_text">Яблоки - это удивительно вкусные и полезные фрукты, которые обладают красивым внешним видом и освежающим вкусом. Их сочная мякоть богата витаминами и минералами, такими как витамин C, калий и диетические волокна. Яблоки прекрасно подходят для украшения десертов, приготовления компотов и соков, а также добавления в салаты и выпечку. Благодаря своему уникальному вкусу и питательным свойствам, яблоки станут отличным выбором для любого времени дня.</string>
    <string name="cherries_text">Вишня - это невероятно ароматная и сочная ягода, которая придает особый вкус любому блюду. Сладкая и кислая вишня обладает неповторимым вкусом, который не оставит равнодушным ни одного гурмана. Используется вишня для приготовления компотов, варенья, джемов и десертов. К тому же, это отличный источник витаминов и антиоксидантов, которые благоприятно влияют на здоровье и общее самочувствие.</string>
    <string name="pears_text">Груши - это утонченные фрукты с нежным ароматом и сладким вкусом. Их сочная и нежная мякоть обладает приятной текстурой и богата витаминами и минералами. Груши идеально подходят для употребления в свежем виде, приготовления десертов, добавления в салаты и варенья. Этот фрукт также известен своими полезными свойствами для пищеварения и общего укрепления организма.</string>
    <string name="melons_text">Дыни - это сочные и освежающие фрукты с нежным вкусом и ароматом лета. Их сочная мякоть насыщена водой и витаминами, делая их идеальным выбором для горячих летних дней. Дыни прекрасно утоляют жажду, насыщают организм полезными веществами и поднимают настроение своим сладким вкусом. Они часто используются в приготовлении фруктовых салатов, соков и мороженого.</string>
    <string name="watermelons_text">Арбузы - это символ лета и отличный способ охладиться в жаркий день. Их сочная и сладкая мякоть насыщена водой и электролитами, что делает их идеальным увлажняющим продуктом. Арбузы прекрасно подходят для употребления в свежем виде, приготовления коктейлей и мороженого, а также добавления в фруктовые салаты и десерты. Большие и сочные ломтики арбуза всегда будут радовать своим сладким вкусом и освежающим эффектом.</string>
</resources>
